feat: create main page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,8 @@
 $background: hsl(25, 100%, 94%);
 
-$orange: rgba(253, 179, 1);
+// $orange: rgba(253, 179, 1);
+
+$orange: hsl(26, 100%, 55%);
 $white: hsl(0, 0%, 100%);
 $black: hsl(0, 0%, 0%);
 
