--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,19 @@ body {
 
 .content {
   padding: 40px 0px;
+
+  &__title {
+    font-weight: 800;
+    font-size: 38px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    justify-items: center;
+  }
 }
 
 .container {
