--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   background-color: $orange;
   border-radius: 30px;
-  padding: 10xp 20px;
+  padding: 10px 20px;
   min-width: 100px;
   text-align: center;
   cursor: pointer;
@@ -55,6 +55,76 @@
     span {
       font-weight: 600;
       font-size: 16px;
+    }
+  }
+
+  &--outline {
+    background-color: #fff;
+    border-color: $orange;
+
+    &,
+    span {
+      color: $orange;
+    }
+
+    svg {
+      path {
+        fill: $orange;
+      }
+    }
+
+    &:hover {
+      background-color: $orange;
+
+      &,
+      span {
+        color: $white;
+      }
+
+      svg {
+        path {
+          fill: $white;
+        }
+      }
+    }
+
+    &:active {
+      background-color: darken($orange, 8%);
+    }
+  }
+
+  &--add {
+    svg {
+      margin-right: 10px;
+    }
+
+    span {
+      font-weight: 600;
+      font-size: 16px;
+      margin-right: 5px;
+    }
+
+    &:hover {
+      i {
+        background-color: #fff;
+        color: $orange;
+      }
+    }
+
+    i {
+      display: inline-block;
+      border-radius: 30px;
+      background-color: $orange;
+      color: #fff;
+      font-weight: 600;
+      width: 22px;
+      height: 22px;
+      font-style: normal;
+      font-size: 13px;
+      line-height: 22px;
+      position: relative;
+      top: -2px;
+      left: 3px;
     }
   }
 }
