feat: add sort, categories and item cards

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,4 +11,6 @@ $grayish: hsl(219, 9%, 45%);
 $lightgrayish: hsl(220, 14%, 75%);
 $superlightgrayish: hsl(223, 64%, 98%);
 
+$buttonslight: #f9f9f9;
+
 $container-width: 90%;
