--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -30,6 +30,12 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     justify-items: center;
   }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .container {
