feat: fetching items

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,7 @@ body {
 
 .content {
   padding: 40px 0px;
+  padding-bottom: 0;
 
   &__title {
     font-weight: 800;
@@ -27,7 +28,7 @@ body {
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-items: center;
   }
 
