--- a/src/scss/components/_item-block.scss
+++ b/src/scss/components/_item-block.scss
@@ -1,19 +1,33 @@
 @import '../variables';
 
 .item-block {
-  width: 280px;
+  width: 300px;
+  min-height: 400px;
   text-align: center;
   margin-bottom: 45px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  &__image-container {
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__image {
-    width: 260px;
+    width: 200px;
   }
 
   &__title {
-    font-size: 20px;
-    font-weight: 900;
+    font-size: 18px;
+    font-weight: 600;
     letter-spacing: 1%;
-    margin-bottom: 20px;
+    height: 70px;
+    text-align: justify;
+    display: flex;
+    justify-content: center;
   }
 
   &__selector {
@@ -58,8 +72,11 @@
   &__rating {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
+    justify-content: flex-start;
+
+    &-count {
+      margin-left: 10px;
+    }
   }
 
   &__price {
