feat: add cart and cart logic

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -44,6 +44,11 @@ body {
   margin: 0 auto;
 }
 
+.container--cart {
+  max-width: 820px;
+  margin: 90px auto;
+}
+
 .cart {
   &__top {
     display: flex;
@@ -200,8 +205,8 @@ body {
         }
         &:hover,
         &:active {
-          border-color: darken($color: $superlightgrayish, $amount: 80);
-          background-color: darken($color: $superlightgrayish, $amount: 80);
+          border-color: red;
+          background-color: red;
         }
       }
     }
@@ -245,8 +250,8 @@ body {
         }
 
         &:hover {
-          background-color: darken($color: $superlightgrayish, $amount: 90);
-          border-color: darken($color: $superlightgrayish, $amount: 90);
+          background-color: $orange;
+          border-color: $orange;
 
           span {
             color: $superlightgrayish;
@@ -307,4 +312,9 @@ body {
       font-size: 18px;
     }
   }
+}
+
+.cart--empty {
+  max-width: 820px;
+  margin: 90px auto;
 }
