feat: transfer getitems logic to redux state

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,6 +19,25 @@ body {
   padding: 40px 0px;
   padding-bottom: 0;
 
+  &__error-info {
+    margin: 80px auto;
+    text-align: center;
+
+    img {
+      width: 560px;
+    }
+
+    h2 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 10px;
+
+      p {
+        font-style: 20px;
+      }
+    }
+  }
+
   &__title {
     font-weight: 800;
     font-size: 38px;
