--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -55,6 +55,7 @@
   &--cart {
     display: flex;
     align-items: center;
+    justify-content: center;
     line-height: 23px;
     padding: 12px 25px;
 
@@ -136,6 +137,38 @@
       position: relative;
       top: -2px;
       left: 3px;
+    }
+  }
+
+  &--fullitem {
+    &:hover {
+      svg {
+        path {
+          stroke: $white;
+        }
+      }
+    }
+
+    svg {
+      position: relative;
+      top: 2px;
+    }
+
+    i {
+      display: inline-block;
+      border-radius: 30px;
+      background-color: $orange;
+      color: $white;
+      font-weight: 600;
+      width: 22px;
+      height: 22px;
+      font-style: normal;
+      font-size: 13px;
+      line-height: 22px;
+      position: relative;
+      top: -2px;
+      left: 3px;
+      margin-right: 10px;
     }
   }
 }
