--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,10 @@
   border-bottom: 1px solid $superlightgrayish;
   padding: 40px 0;
 
+  &__cart {
+    width: 180px;
+  }
+
   .container {
     display: flex;
     align-items: center;
