--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -10,6 +10,7 @@
   cursor: pointer;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
   border: 1px solid transparent;
+  height: 46px;
   @include noselect();
 
   &,
