--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,6 +3,9 @@
 .categories {
   ul {
     display: flex;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    justify-content: center;
 
     li {
       background-color: $buttonslight;
