--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,18 @@
 .root {
   position: relative;
+  grid-area: search;
+
+  @media (max-width: 1100px) {
+    .input {
+      width: 100%;
+      margin-top: 25px;
+    }
+
+    .icon {
+      left: 14px;
+      top: 37px;
+    }
+  }
 }
 
 .input {
